Commit bugs solved. For the scrolling problem on smartphones, I added touch-action: pan-y and overflow-y: auto in main in index.css. While for the problem of text disappearing instead of appearing (on smartphone), I modified the toggleActions programmed in animation.js by adding a condition (if) and inverting the animation if on smartphone.

--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,16 @@ body {
   color: white;
   width: 100dvw;
   overflow-x: hidden;
+  /* overflow-y: hidden; */
   height: 100%;
   background: #000;
   border-color: #3b3b3b;
   user-select: none;
+}
+
+main {
+  touch-action: pan-y;
+  overflow-y: auto;
 }
 
 canvas {
@@ -31,94 +37,172 @@ canvas {
 
 @layer utilities {
   .flex-center {
-    @apply flex items-center justify-center
+    @apply flex items-center justify-center;
   }
 
   .nav-height {
-    @apply h-[calc(100vh-60px)]
+    @apply h-[calc(100vh-60px)];
   }
 
   .btn {
-    @apply px-5 py-2 rounded-3xl bg-blue my-5 hover:bg-transparent border border-transparent hover:border hover:text-blue hover:border-blue
+    @apply px-5 py-2 rounded-3xl bg-blue my-5 hover:bg-transparent border border-transparent hover:border hover:text-blue hover:border-blue;
   }
 
   .color-container {
-    @apply flex items-center justify-center px-4 py-4 rounded-full bg-gray-300 backdrop-blur
+    @apply flex items-center justify-center px-4 py-4 rounded-full bg-gray-300 backdrop-blur;
   }
 
   .size-btn-container {
-    @apply flex items-center justify-center p-1 rounded-full bg-gray-300 backdrop-blur ml-3 gap-1
+    @apply flex items-center justify-center p-1 rounded-full bg-gray-300 backdrop-blur ml-3 gap-1;
   }
 
   .size-btn {
-    @apply w-10 h-10 text-sm flex justify-center items-center bg-white text-black rounded-full transition-all
+    @apply w-10 h-10 text-sm flex justify-center items-center bg-white text-black rounded-full transition-all;
   }
 
   .common-padding {
-    @apply sm:py-32 py-20 sm:px-10 px-5
+    @apply sm:py-32 py-20 sm:px-10 px-5;
   }
 
   .section-heading {
-    @apply text-gray lg:text-6xl md:text-5xl text-3xl lg:mb-0 mb-5 font-medium opacity-0 translate-y-20
+    @apply text-gray lg:text-6xl md:text-5xl text-3xl lg:mb-0 mb-5 font-medium opacity-0 translate-y-20;
   }
 
   .feature-text {
-    @apply text-gray max-w-md text-lg md:text-xl font-semibold opacity-0 translate-y-[100px]
+    @apply text-gray max-w-md text-lg md:text-xl font-semibold opacity-0 translate-y-[100px];
   }
 
   .feature-text-container {
-    @apply w-full flex-center flex-col md:flex-row mt-10 md:mt-16 gap-5
+    @apply w-full flex-center flex-col md:flex-row mt-10 md:mt-16 gap-5;
   }
 
   .feature-video {
-    @apply w-full h-full object-cover object-center scale-150 opacity-0
+    @apply w-full h-full object-cover object-center scale-150 opacity-0;
   }
 
   .feature-video-container {
-    @apply w-full flex flex-col md:flex-row gap-5 items-center
+    @apply w-full flex flex-col md:flex-row gap-5 items-center;
   }
 
   .link {
-    @apply text-blue hover:underline cursor-pointer flex items-center text-xl opacity-0 translate-y-20
+    @apply text-blue hover:underline cursor-pointer flex items-center text-xl opacity-0 translate-y-20;
   }
 
   .control-btn {
-    @apply ml-4 p-4 rounded-full bg-gray-300 backdrop-blur flex-center
+    @apply ml-4 p-4 rounded-full bg-gray-300 backdrop-blur flex-center;
   }
 
   .hero-title {
-    @apply text-center font-semibold text-3xl text-gray-100 opacity-0 max-md:mb-10
+    @apply text-center font-semibold text-3xl text-gray-100 opacity-0 max-md:mb-10;
   }
 
   .hiw-title {
-    @apply text-4xl md:text-7xl font-semibold text-center
+    @apply text-4xl md:text-7xl font-semibold text-center;
   }
 
   .hiw-subtitle {
-    @apply text-gray font-semibold text-xl md:text-2xl py-10 text-center
+    @apply text-gray font-semibold text-xl md:text-2xl py-10 text-center;
   }
 
   .hiw-video {
-    @apply absolute w-[95%] h-[90%] rounded-[56px] overflow-hidden
+    @apply absolute w-[95%] h-[90%] rounded-[56px] overflow-hidden;
   }
 
   .hiw-text-container {
-    @apply flex md:flex-row flex-col justify-between items-start gap-24
+    @apply flex md:flex-row flex-col justify-between items-start gap-24;
   }
 
   .hiw-text {
-    @apply text-gray text-xl font-normal md:font-semibold
+    @apply text-gray text-xl font-normal md:font-semibold;
   }
 
   .hiw-bigtext {
-    @apply text-white text-3xl md:text-5xl font-normal md:font-semibold my-2
+    @apply text-white text-3xl md:text-5xl font-normal md:font-semibold my-2;
   }
 
   .video-carousel_container {
-    @apply relative sm:w-[70vw] w-[88vw] md:h-[70vh] sm:h-[50vh] h-[35vh]
+    @apply relative sm:w-[70vw] w-[88vw] md:h-[70vh] sm:h-[50vh] h-[35vh];
   }
 
   .g_fadeIn {
-    @apply opacity-0 translate-y-[100px]
+    @apply opacity-0 translate-y-[100px];
   }
+}
+
+body::-webkit-scrollbar {
+  display: none;
+  width: 8px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: transparent; /* Couleur de la poignée */
+  border-radius: 4px; /* Bordure arrondie de la poignée */
+  transition: background-color 0.3s ease-in-out;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: transparent; /* Couleur du rail de la barre de défilement */
+}
+
+body::-webkit-scrollbar-track:hover {
+  background-color: rgba(
+    50,
+    50,
+    50,
+    0.5
+  ); /* Couleur du rail de la barre de défilement */
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(
+    0,
+    200,
+    0,
+    0.7
+  ); /* Couleur de la poignée lors du survol */
+}
+
+body::-webkit-scrollbar-thumb:active {
+  background-color: rgba(
+    0,
+    0,
+    200,
+    0.7
+  ); /* Couleur de la poignée lors du clic */
+}
+
+body:hover::-webkit-scrollbar-thumb {
+  background-color: rgba(
+    214,
+    7,
+    7,
+    0.5
+  ); /* Couleur de la poignée lors du défilement */
+}
+
+.hiw-video {
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+  /* position: relative; */
+}
+
+@media screen and (min-width: 1550px) {
+  .hiw-video::before {
+    content: "";
+    position: absolute;
+    top: -10px; 
+    left: -10px; 
+    right: -10px; 
+    bottom: -10px; 
+    border-radius: 150px; 
+    border: 10px solid transparent; 
+    box-shadow: 0 0 0 100vmax rgba(0, 0, 0, 0.75); 
+    z-index: 1;
+  }
+}
+
+.container {
+  /* touch-action: pan-y;
+  overflow-y: auto; */
 }
